# expertise_chats_gateway

./: Dockerfile  pyproject.toml
src/app/: main.py
src/app/interface/fastapi/: server.py
src/app/setup/: broker.py  startup.py
src/auth/application/use_cases/: validate_credentials.py  validate_token.py
src/auth/dependencies/: handlers.py  repositories.py  use_cases.py
src/auth/domain/: entities.py  exceptions.py  schemas.py
src/auth/events/: setup.py
src/auth/events/handlers/: token_validation.py  validate_bearer.py
src/auth/events/setup/: auth.py  setup.py
src/auth/infrastructure/sqlAlchemy/: companies_repository.py
src/auth/utils/: decode_token.py
src/chats/application/use_cases/: create_chat.py  create_message.py  update_chat.py  update_chat_history.py
src/chats/dependencies/: handlers.py  repositories.py  use_cases.py
src/chats/domain/entities/: chat.py  message.py
src/chats/domain/repositories/: message_repository.py
src/chats/domain/schemas/: chats.py  messages.py
src/chats/events/: setup.py
src/chats/events/handlers/: generate_chat_title.py  incomming_message.py  outgoing_message.py  update_chat_history.py
src/chats/infrastructure/redis/: session_repository.py
src/chats/infrastructure/sqlAlchemy/: chats_repository.py  messages_repository.py
src/chats/interface/fastapi/: chat_routes.py
src/sessions/dependencies/: repositories.py
src/shared/dependencies/: producers.py
src/shared/utils/: ws_connections.py
src/streaming/dependencies/: handlers.py  services.py
src/streaming/events/: schemas.py  setup.py
(+17 files in other folders)
